# simple-pulse-desktop-capture

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
